2007-11-19 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* docs/dfu-programmer.1, src/arguments.c, src/arguments.h,
	  src/commands.c, AUTHORS: Applied the patch that Geoffrey
	  Wossum provided to add a reset command.
	* fedora/*: Adding udev rules for and permissions so that
	  the console owner will automatically be able to flash
	  any of the devices supported by dfu-programmer.
	* dfu-programmer.spec.in, Makefile.am, configure.ac:
	  Moved the spec file into the fedora specific
	  directory and excluded from the tar dist.
	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.4 release

2007-08-15 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* dfu-programmer.spec.in: Updating the license tag.

2007-08-12 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* AUTHORS: added Anton Blad (for new devices) and Nick Hibma
	  (for bug fixes) to the list of contributors.
	* configure.ac: Incremented the release number
	* docs/dfu-programmer.1: Added at90usb162 and at90usb82
	  devices
	* dfu-programmer.spec.in: Added the newly supported chips
	* NEWS: Updated the latest news about the 0.4.3 release
	* src/arguments.c, src/arguments.h: Applied the patch that
	  Anton Blad provided to add support for the at90usb162
	  and at90usb82.

2007-07-22 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* src/atmel.c: Fix the incorrect status to string conversion
	  that Nick Hibma found and pointed out.
	* dfu-programmer.spec.in: Updating the file to be compliant
	  with the Fedora requirements for packaging (again)

2007-07-07 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.2 release
	* dfu-programmer.spec.in: Updating the file to be compliant
	  with the Fedora requirements for packaging

2007-04-29 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* configure.ac: Incremented the release number